k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: resume
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mohamedaymanacr.azurecr.io/resume-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets"    # CSI driver needs a mount point to write secrets to
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/visits
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-keyvault-secrets  # references our SecretProviderClass
